crates/snapshot-tests/tests/snapshots/parser__stray_cr__ml_more_whitespace.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ ml_more_whitespace:1:6
  │
1 │ """    """
  │       invalid character '\r' in string


error: invalid character in string: `\r`
 --> ml_more_whitespace:1:6
  |
1 | """  ␍  """
  |      ^ invalid character '\r' in string
Error {
    kind: "InvalidCharInString",
    message: "invalid character in string: `\\r`",
    span: 5..6,
    path: None,
}
